Fix not showing restart button

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -176,6 +176,11 @@ body {
   // }
 }
 
+#restart {
+  margin-top: -30px;
+  height: 0px;
+}
+
 #board_buttons {
-  margin: 0 30px;
+  margin-top: -20px;
 }
